signing and everything else.

--- a/static/global.css
+++ b/static/global.css
@@ -16,8 +16,8 @@ html {
   font-size: 150%;
 }
 body {
-  width: 1050px;
-  padding: 40px 20px;
+  width: 480px;
+  padding: 20px;
   margin: auto;
 }
 a {
